fixed input alignment

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,5 +1,5 @@
 .form-group {
-  width: 50%;
+  width: 30%;
   margin: 0;
   float: left;
   display: inline-block;
